# fgspectra

./: .buildinfo  .coveragerc  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  examples.html  fgspectra.html  genindex.html  index.html  install.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  seds.py  setup.py  spectra.py
.doctrees/: environment.pickle  examples.doctree  fgspectra.doctree  index.doctree  install.doctree  modules.doctree
.github/workflows/: publish.yml  testing.yml  wheels.yml
_modules/: index.html
_modules/fgspectra/: cross.html  frequency.html  model.html  power.html
_sources/: examples.rst.txt  index.rst.txt  install.rst.txt
docs/source/: conf.py  fgspectra.rst  modules.rst
fgspectra/: __init__.py  cross.py  frequency.py  model.py  models.py  power.py
fgspectra/data/: PointSource_Spectral_indices_Planck_catalogue.npy
notebooks/: ACT_Models.ipynb  Basic_Example.ipynb  correlated_dust_sync.ipynb  smallscales_from_pysm3.ipynb  sum_CIB_tSZ_tSZxCIB_fortran_routine.txt  tSZxCIB_test.ipynb
notebooks/pysm3_params/: paramsd9_reffreq23.0 GHz_maskGAL070.BB.npz  paramsd9_reffreq23.0 GHz_maskGAL070.EE.npz  paramsd9_reffreq23.0 GHz_maskGAL070.TE.npz  paramsd9_reffreq23.0 GHz_maskGAL070.TT.npz  paramsd9_reffreq353.0 GHz_maskGAL070.BB.npz  paramsd9_reffreq353.0 GHz_maskGAL070.EE.npz  paramsd9_reffreq353.0 GHz_maskGAL070.TE.npz  paramsd9_reffreq353.0 GHz_maskGAL070.TT.npz  paramsd9_reffreq353.0 GHz_maskGAL080.BB.npz  paramsd9_reffreq353.0 GHz_maskGAL080.EE.npz  paramsd9_reffreq353.0 GHz_maskGAL080.TE.npz  paramsd9_reffreq353.0 GHz_maskGAL080.TT.npz  paramss4_reffreq23.0 GHz_maskGAL080.BB.npz  paramss4_reffreq23.0 GHz_maskGAL080.EE.npz  paramss4_reffreq23.0 GHz_maskGAL080.TE.npz  paramss4_reffreq23.0 GHz_maskGAL080.TT.npz
tests/: test_frequency.py  test_models.py
