[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fgspectra"
version = "1.1.0"
description = "Foreground SED and power spectrum library for building cross frequency power spectrum models"
readme = "README.md"
authors = [
  { name="Zack Li", email="xzackli@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["astrophysics", "foregrounds", "cmb"]
dependencies = [
    "scipy",
    "pyyaml",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
"Homepage" = "https://github.com/simonsobs/fgspectra"
